# claude-code-stats

./: .gitignore  LICENSE  METRICS.md  README.md  pyproject.toml
src/claude_code_stats/: __init__.py  __main__.py  cli.py  exporters.py  models.py  parser.py
web/: app.js  index.html  style.css
