[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-stats"
version = "0.1.1"
description = "Visualize Claude Code usage patterns from your .claude folder"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Claude Code Stats Contributors" }
]
keywords = ["claude", "claude-code", "statistics", "visualization", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-stats = "claude_code_stats.cli:main"

[project.urls]
Homepage = "https://github.com/saurabharora90/claude-code-stats"
Repository = "https://github.com/saurabharora90/claude-code-stats"
Issues = "https://github.com/saurabharora90/claude-code-stats/issues"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "web/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_stats"]

[tool.hatch.build.targets.wheel.force-include]
"web" = "claude_code_stats/web"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
